# gnotime-mark

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  HACKING.md  Makefile.am  README  TODO  cmake_config.h.in  configure.in  gnotime.pro  meson.build  meson_config.h.in
debian/: Makefile.in
doc/es/: Makefile.in
doc/eu/: Makefile.in
fedora/: gnotime.spec.in
glade/: Makefile.am  interval_edit.glade  journal.glade  plugin_editor.glade  prefs.glade  project_properties.glade  task_properties.glade
gsettings/: com.github.goedson.gnotime.gschema.xml  com.github.markuspg.gnotime.gschema.xml
po/: .intltool-merge-cache  POTFILES.in
redhat/: gnotime.spec
src/: CMakeLists.txt  Makefile.am  active-dialog.c  active-dialog.h  app.c  app.h  cur-proj.h  dbus.c  dbus.h  design.txt  dialog.c  dialog.h  err-throw.c  err-throw.h  err.c  err.h  export.c  export.h  fake_qof.c  fake_qof.h  file-io.c  file-io.h  gconf-gnomeui.c  gconf-gnomeui.h  gconf-io-p.h  gconf-io.c  gconf-io.h  ghtml-deprecated.c  ghtml-deprecated.h  ghtml.c  ghtml.h  gnome-dialog.c  gnome-dialog.h  gnome-init.h  gnome-program.h  gnome-propertybox.c  gnome-propertybox.h  gnome-uidefs.h  gnome-util.h  gsettings-io.c  (+139 more)
ui/: active-dialog.xml  idle-dialog.xml  idle.xml  interval_edit.xml  notes-area.xml  notes.xml  prefs.xml  project_properties.xml  task_properties.xml
