
gttgladedir = $(datadir)/gnotime/glade

gttglade_DATA =              \
  active.glade               \
  idle.glade                 \
  interval_edit.glade        \
  journal.glade              \
  notes.glade                \
  plugin_editor.glade        \
  prefs.glade                \
  project_properties.glade   \
  task_properties.glade

EXTRA_DIST =          \
   $(gttglade_DATA)
