cmake_minimum_required(VERSION 3.13.4)

add_executable(${PROJECT_NAME}
    main.c)
target_include_directories(${PROJECT_NAME} SYSTEM
    PRIVATE ${DBUS_GLIB_INCLUDE_DIRS}
    PRIVATE ${GLADE2_INCLUDE_DIRS}
    PRIVATE ${GLIB2_INCLUDE_DIRS}
    PRIVATE ${GTK2_INCLUDE_DIRS}
    PRIVATE ${GUILE2_INCLUDE_DIRS}
    PRIVATE ${X11_INCLUDE_DIRS}
    PRIVATE ${XSCRNSAVER_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME}
    ${DBUS_GLIB_LINK_LIBRARIES}
    ${GLADE2_LINK_LIBRARIES}
    ${GLIB2_LINK_LIBRARIES}
    ${GTK2_LINK_LIBRARIES}
    ${GUILE2_LINK_LIBRARIES}
    ${X11_LINK_LIBRARIES}
    ${XSCRNSAVER_LINK_LIBRARIES})
